--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,10 +1,11 @@
 .header {
     height: 88px;
-    margin-bottom: 24px;
-    padding-top: 24px;
+
     // .header__container
 
-    &__container {}
+    &__container {
+      height: 100%;
+    }
 
     // .header__menu
 
@@ -12,11 +13,12 @@
 }
 
 .menu {
-
+    height: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     // .menu__icon
-    
+
     &__icon {}
 
     // .menu__body
@@ -35,7 +37,7 @@
         gap: 48px;
         @media (max-width:$mobile){
              display: flex;
-             flex-direction: column; 
+             flex-direction: column;
              align-items: center;
             // background: #F2F3F4;
             // z-index: 10;
