--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -908,19 +908,38 @@ position: relative;
 
  //=====================================================
  .footer {
-    padding-top: 60px;
-height: 600px;
+    padding: 60px 17px 0px 17px;
+    height: 600px;
      // .footer__container
 
      &__container {
-        display: flex;
-        justify-content: space-between;
-        width: 1280px;
-        height: 358px;
-        padding: 64px 48px 64px 48px;
-        border-radius: 20px;
-        background: #FFFFFF;
-        }
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+       gap: 17px;
+       max-width: 1280px;
+       width: 100%;
+       //height: 358px;
+       padding: 40px 30px 40px 30px;
+       border-radius: 20px;
+       background: #FFFFFF;
+
+       .bb {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         flex-wrap: wrap;
+         gap: 40px;
+
+         &:first-child {
+           max-width: 1184px;
+         }
+
+         &:last-child {
+           max-width: 855px;
+         }
+       }
+     }
 
      // .footer__list
 
@@ -931,7 +950,7 @@ height: 600px;
         gap: 16px;
      }
      &__contact{
-        padding-right: 130px;
+        //padding-right: 130px;
      }
      &__button{
         //styleName: Body L;
@@ -944,12 +963,33 @@ height: 600px;
             padding: 16px 32px 16px 32px;
             border-radius: 100px;
             background: #F2F3F4;
-            margin-top: 100px;
      }
          &__button:hover{
             background: #a3a3a3;
          }
  }
+
+ @media screen and (max-width: $mobile) {
+   .footer {
+     &__container {
+       padding: 28px 16px 28px 16px;
+     }
+   }
+ }
+
+@media screen and (max-width: 622px) {
+  .footer {
+    &__container {
+      .bb {
+        &:last-child {
+          justify-content: center;
+        }
+      }
+    }
+  }
+}
+
+
 
 .listwrap {
     padding-top: 24px;
