--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -194,6 +194,7 @@ width: 800px;
     &__text {
         display: flex;
         flex-direction:column ;
+        align-items: center;
         gap: 30px;
         @media (max-width:$mobile){
              flex-direction: column-reverse; 
@@ -212,6 +213,8 @@ width: 800px;
            }
            @media (max-width:$mobile){
              font-size: 24px; 
+             padding-right: 0px;
+             padding-top: 0px;
            }
         }
 
@@ -240,7 +243,7 @@ width: 800px;
             color: #7F8596;
             padding-top: 99px;
             display: flex;
-            
+            align-items: center;
             @media (max-width:$mobile){
                 padding-top: 0px;
                 
@@ -310,11 +313,11 @@ width: 800px;
 
 .arrow_left{
 rotate: 180deg;
-
+padding-left: 21px;
 }
 
 .arrow_right{
-
+padding-left: 21px;
 }
 .fade {
     opacity: 1;
@@ -338,11 +341,14 @@ rotate: 180deg;
     padding-top: 128px;
 background: #000000;
 
+
     // .MobileApp_img
 
     &_img {
        padding-top: 60px;
        padding-left: 120px;
+       
+           @include adaptiveValue("padding-left", 120, 0, 0, 1320, 768);
     }
 
     // .MobileApp__container
@@ -350,10 +356,11 @@ background: #000000;
     &__container {
         display: flex;
         justify-content: space-between;
-        width: 1280px;
+        // width: 1280px;
             height: 700px;
             border-radius: 20px;
             background-color: #1F2022;
+            @include adaptiveValue("height", 700, 407, 0, 1320, 768 );
             
     }
 
@@ -364,6 +371,8 @@ background: #000000;
         max-width: 388px;
         padding-right: 120px;
         padding-top: 173px;
+        @include adaptiveValue("padding-top", 173, 48, 0, 1320, 768);
+        @include adaptiveValue("padding-right", 120, 24, 0, 1320, 768);
     }
 
     // .MobileApp__h1
@@ -374,6 +383,7 @@ background: #000000;
             font-size: 32px;
             font-weight: 400;
             line-height: 38.4px;
+            @include adaptiveValue("font-size", 32, 24, 0, 1320, 768);
            
     }
 
@@ -387,6 +397,7 @@ background: #000000;
             line-height: 25.2px;
            padding-top: 16px;
            padding-bottom: 32px;
+            @include adaptiveValue("font-size", 16, 14, 0, 1320, 768);
     }
 
     // .MobileApp__list
@@ -406,6 +417,20 @@ background: #000000;
             font-weight: 200;
             
     }
+}
+@media (max-width:$mobile){
+      
+}
+
+.MobileApp img{
+    // @media (max-width:$tablet){
+
+    //     height: 293px !important;
+    //         width: 268px !important;
+    // }
+        @include adaptiveValue("height", 580, 293, 0, 1320, 768);
+                 @include adaptiveValue("width", 532, 268, 0, 1320, 768);
+   
 }
 
 .list_numbers{
@@ -443,7 +468,8 @@ background: #000000;
         position: relative;
         display: flex;
             justify-content: space-between;
-            width: 1280px;
+            // width: 1280px;
+            width: 100%;
             height: 700px;
             border-radius: 20px;
             background-color: #1F2022;
